# task-tracker-cli

./: .gitignore  pyproject.toml  pyvenv.cfg
task_cli/: cli.py  model.py  models.py  utils.py
task_cli/commands/: create_task.py  delete_task.py  list_tasks.py  mark_as_done.py  mark_as_in_progress.py  update_task.py
